Simplificar enlace del iframe de YouTube

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
         <section id="containerDos">
             <h4>Partida ganadora del desafío semanal</h4>
 
-            <iframe src="https://www.youtube.com/embed/tZ3ERxYdMHc?si=8qykm1pB8016ZLQa" title="YouTube video player" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/tZ3ERxYdMHc"  title="YouTube video player" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            referrerpolicy="strict-origin-when-cross-origin"  allowfullscreen></iframe>
+
 
         </section>
     </main>
